temporary fix for adding title so that it does not overlap with longer region labels

--- a/src/components/react_plot_style.css
+++ b/src/components/react_plot_style.css
@@ -1,7 +1,7 @@
 
 .rv-xy-plot__axis__title {
   transform-origin: left;
-  transform: translate(30%, 20%) rotate(90deg);
+  transform: translate(30%, 40%) rotate(90deg);
 }
 
 
